Fix single product mobile spacing

--- a/style.css
+++ b/style.css
@@ -968,7 +968,7 @@ footer p {
   display: flex !important;
   justify-content: center !important;
   align-items: center !important;
-  min-height: 550px;
+  min-height: auto;
 }
 
 @media (max-width: 1100px) {
